<resources>
    <string name="app_name">Blindroid</string>
    <string name="role_button_request">Ustaw jako domyślną aplikację telefonu</string>
    <string name="role_button_granted">Aplikacja jest domyślna</string>
    <string name="phone_number_hint">Numer telefonu</string>
    <string name="call_button">Zadzwoń</string>
    <string name="switch_announce">Ogłaszaj kto dzwoni</string>
    <string name="switch_speaker">Automatyczny głośnik po odsunięciu od ucha</string>
    <string name="switch_call_waiting">Ogłaszaj połączenie oczekujące w trakcie rozmowy</string>
    <string name="switch_call_state">Potwierdzaj stany połączeń (mowa)</string>
    <string name="switch_call_vibrate">Wibracje dla stanów połączeń</string>
    <string name="switch_end_call_vibrate">Krótka wibracja po zakończeniu rozmowy</string>
    <string name="switch_voice_commands">Komendy głosowe w trakcie rozmowy</string>
    <string name="end_call_key">Klawisz kończący rozmowę</string>
    <string name="end_call_key_none">Brak</string>
    <string name="end_call_key_volume_up">Głośność + (podwójne naciśnięcie)</string>
    <string name="end_call_key_volume_down">Głośność - (podwójne naciśnięcie)</string>
    <string name="end_call_key_headset">Zestaw słuchawkowy (przycisk)</string>
    <string name="end_call_key_power">Przycisk zasilania (ustawienie systemowe)</string>
    <string name="end_call_power_hint">Aby kończyć rozmowy przyciskiem zasilania, włącz tę opcję w ustawieniach dostępności systemu.</string>
    <string name="accessibility_power_service_label">Blindroid - przycisk zasilania</string>
    <string name="accessibility_power_service_desc">Kończy rozmowę po dwukrotnym naciśnięciu przycisku zasilania, gdy opcja jest włączona.</string>
    <string name="open_accessibility_settings">Otwórz ustawienia dostępności</string>
    <string name="voice_command_button">Komendy głosowe</string>
    <string name="voice_command_status_idle">Komendy głosowe: gotowe</string>
    <string name="voice_command_status_listening">Słucham…</string>
    <string name="voice_command_status_processing">Przetwarzanie…</string>
    <string name="voice_command_status_error">Nie rozpoznano komendy</string>
    <string name="voice_command_status_unavailable">Rozpoznawanie mowy niedostępne</string>
    <string name="permission_contacts">Dostęp do kontaktów</string>
    <string name="permission_contacts_granted">Dostęp do kontaktów: OK</string>
    <string name="tts_voice">Głos TTS</string>
    <string name="tts_rate">Prędkość mowy</string>
    <string name="tts_volume">Głośność komunikatu</string>
    <string name="notification_tts_title">Powiadomienia – TTS</string>
    <string name="notification_tts_separate">Osobny głos dla powiadomień</string>
    <string name="notification_tts_voice">Głos powiadomień</string>
    <string name="notification_tts_rate">Prędkość mowy (powiadomienia)</string>
    <string name="notification_tts_volume">Głośność (powiadomienia)</string>
    <string name="tts_repeat">Powtórzenia</string>
    <string name="tts_mode">Tryb powiadomień</string>
    <string name="tts_mode_ring_and_speech">Dzwonek + mowa</string>
    <string name="tts_mode_speech_only">Tylko mowa (bez dzwonka)</string>
    <string name="tts_mode_speech_then_ring">Mowa, potem dzwonek</string>
    <string name="tts_unavailable">Brak silnika TTS</string>
    <string name="switch_sms">Czytaj SMS na ekranie blokady</string>
    <string name="switch_notifications">Czytaj powiadomienia na ekranie blokady</string>
    <string name="switch_notification_queue">Kolejkuj powiadomienia (bez przerywania mowy)</string>
    <string name="switch_notification_summary">Czytaj tylko tytuł powiadomienia</string>
    <string name="notification_filter_label">Filtr powiadomień</string>
    <string name="notification_filter_all">Wszystkie aplikacje</string>
    <string name="notification_filter_whitelist">Tylko z białej listy</string>
    <string name="notification_filter_blacklist">Poza czarną listą</string>
    <string name="notification_whitelist_button">Edytuj białą listę aplikacji</string>
    <string name="notification_blacklist_button">Edytuj czarną listę aplikacji</string>
    <string name="notification_whitelist_title">Biała lista powiadomień</string>
    <string name="notification_blacklist_title">Czarna lista powiadomień</string>
    <string name="notification_list_save">Zapisz</string>
    <string name="switch_unlocked">Czytaj także po odblokowaniu</string>
    <string name="switch_privacy">Tryb prywatny: tylko nadawca/aplikacja</string>
    <string name="switch_privacy_title">Prywatny: czytaj tylko tytuł powiadomień</string>
    <string name="launcher_label">Launcher</string>
    <string name="section_calls">Rozmowy</string>
    <string name="section_notifications">Powiadomienia</string>
    <string name="module_shortcuts">Pokaż skróty modułów na pulpicie</string>
    <string name="launcher_enable">Włącz Blindroid Launcher</string>
    <string name="launcher_settings">Ustaw jako domyślny launcher</string>
    <string name="launcher_hint">Po włączeniu wybierz Blindroid Launcher jako domyślny ekran główny.</string>
    <string name="notification_access_button">Włącz dostęp do powiadomień</string>
    <string name="notification_access_granted">Dostęp do powiadomień: OK</string>
    <string name="update_label">Aktualizacje</string>
    <string name="update_auto">Automatyczne sprawdzanie aktualizacji</string>
    <string name="update_check_now">Sprawdź aktualizacje teraz</string>
    <string name="update_status_idle">Brak sprawdzenia</string>
    <string name="update_status_checking">Sprawdzanie…</string>
    <string name="update_status_latest">Masz najnowszą wersję</string>
    <string name="update_status_available">Dostępna aktualizacja</string>
    <string name="update_dialog_title">Nowa wersja</string>
    <string name="update_dialog_download">Pobierz i zainstaluj</string>
    <string name="update_dialog_later">Później</string>
    <string name="update_download_started">Pobieranie aktualizacji rozpoczęte</string>
    <string name="update_download_complete">Pobieranie zakończone, rozpocznij instalację</string>
    <string name="update_no_download">Brak pliku APK w najnowszym wydaniu</string>
    <string name="update_download_checksum_failed">Błąd pobierania — plik uszkodzony. Spróbuj ponownie.</string>
    <string name="update_download_size_failed">Błąd pobierania — rozmiar nieprawidłowy. Spróbuj ponownie.</string>
    <string name="update_notification_channel">Aktualizacje Blindroid</string>
    <string name="update_notification_title">Dostępna aktualizacja</string>
    <string name="update_notification_text">Wersja %1$s jest gotowa do pobrania</string>
    <string name="chime_label">Zegarynka</string>
    <string name="chime_enable">Podawanie godziny</string>
    <string name="chime_interval">Interwał</string>
    <string name="chime_interval_15">Co 15 minut</string>
    <string name="chime_interval_30">Co 30 minut</string>
    <string name="chime_interval_60">Co godzinę</string>
    <string name="chime_start">Od</string>
    <string name="chime_end">Do</string>
    <string name="tools_label">Ulubione i narzędzia</string>
    <string name="favorites_manage">Zarządzaj ulubionymi aplikacjami</string>
    <string name="favorites_open">Otwórz ulubione aplikacje</string>
    <string name="favorites_empty">Brak ulubionych aplikacji</string>
    <string name="tools_open">Narzędzia i zasoby</string>
    <string name="tools_dialog_title">Narzędzia</string>
    <string name="tools_action_export">Eksportuj ustawienia</string>
    <string name="tools_action_import">Importuj ustawienia</string>
    <string name="tools_action_logs">Otwórz diagnostykę</string>
    <string name="tools_action_updates">Folder aktualizacji</string>
    <string name="tools_action_data">Folder danych aplikacji</string>
    <string name="scheduled_action_label">Automatyczne uruchamianie</string>
    <string name="scheduled_action_enable">Włącz zaplanowane akcje</string>
    <string name="scheduled_action_target">Akcja do uruchomienia</string>
    <string name="scheduled_action_time">Godzina uruchomienia</string>
    <string name="scheduled_action_target_none">Brak</string>
    <string name="scheduled_action_target_main">Blindroid – ekran główny</string>
    <string name="scheduled_action_target_navigation">Mówiąca mapa</string>
    <string name="scheduled_action_target_documents">Asystent dokumentów</string>
    <string name="scheduled_action_target_face">FaceID – asystent</string>
    <string name="scheduled_action_target_obstacle">Przeszkody</string>
    <string name="scheduled_action_target_currency">Rozpoznawanie walut</string>
    <string name="scheduled_action_target_light">Wykrywanie światła</string>
    <string name="scheduled_action_target_scan">Centrum skanowania</string>
    <string name="exact_alarm_title">Dokładne alarmy</string>
    <string name="exact_alarm_message">Aby zegarynka działała dokładnie o pełnych godzinach i kwadransach, aplikacja potrzebuje zezwolenia na dokładne alarmy. Włącz je w ustawieniach.</string>
    <string name="exact_alarm_allow">Przejdź do ustawień</string>
    <string name="exact_alarm_cancel">Anuluj</string>
    <string name="in_call_title">Połączenie</string>
    <string name="answer">Odbierz</string>
    <string name="reject">Odrzuć</string>
    <string name="hangup">Rozłącz</string>
    <string name="unknown_caller">Nieznany numer</string>
    <string name="section_currency">Rozpoznawanie walut</string>
    <string name="section_camera">Kamera</string>
    <string name="scan_hub_title">Centrum skanowania</string>
    <string name="section_documents">Dokumenty</string>
    <string name="section_face">FaceID - asystent</string>
    <string name="section_obstacle">Przeszkody</string>
    <string name="section_safety">Bezpieczeństwo</string>
    <string name="section_night">Tryb nocny</string>
    <string name="section_accessibility">Dostępność</string>
    <string name="currency_open">Uruchom rozpoznawanie walut</string>
    <string name="currency_title">Rozpoznawanie walut</string>
    <string name="currency_mode">Tryb rozpoznawania</string>
    <string name="currency_mode_ocr">OCR (tekst z banknotu)</string>
    <string name="currency_mode_model">Model banknotów (TFLite)</string>
    <string name="currency_model_label">Model banknotów</string>
    <string name="currency_hint">Skieruj aparat na banknot. Dla lepszej dokładności trzymaj w dobrym świetle.</string>
    <string name="documents_open">Uruchom asystenta dokumentów</string>
    <string name="section_light">Światło</string>
    <string name="light_open">Uruchom wykrywanie światła</string>
    <string name="light_hint">Tryb kierunku używa kamery i zużywa więcej baterii.</string>
    <string name="obstacle_open">Uruchom asystenta przeszkód</string>
    <string name="face_open">Uruchom asystenta FaceID</string>
    <string name="talkback_wizard_title">Konfiguracja czytnika ekranu</string>
    <string name="talkback_system_title">Systemowy TalkBack</string>
    <string name="talkback_status_off">Systemowy TalkBack: wyłączony</string>
    <string name="talkback_open_settings">Otwórz ustawienia dostępności</string>
    <string name="talkback_open_shortcut">Ustaw skrót czytnika</string>
    <string name="talkback_refresh">Sprawdź ponownie</string>
    <string name="talkback_hint">Włącz TalkBack w ustawieniach dostępności i wróć tutaj, aby potwierdzić.</string>
    <string name="talkback_gesture_set_hint">Jeśli znasz VoiceOver z iOS, wybierz zestaw gestów „iOS (VoiceOver)” w ustawieniach gestów.</string>
    <string name="talkback_backup_title">Zapasowy czytnik BlindReader</string>
    <string name="talkback_backup_status_off">BlindReader: wyłączony</string>
    <string name="talkback_backup_hint">Jeśli systemowy TalkBack nie działa, włącz BlindReader.</string>
    <string name="talkback_backup_open_settings">Ustawienia BlindReader</string>
</resources>